--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -1,11 +1,49 @@
-title: My cool site
-description: Text about my cool site
+# themeNoPipe: true
+
+title: (재)일본군성노예제문제해결을위한정의기억연대
+description: (재)일본군성노예제문제해결을위한정의기억연대 홈페이지에 오신것을 환영합니다.
 images:
-  - site-feature-image.jpg
+  - img/site-feature-image.png
+logo: /images/bg-404.png
+site: ww
 
 license:
-  title_of_work: This website
-  link_to_work: URL
-  createor_of_work: NAME
-  link_to_creator_profile: URL
-  year_of_creation: 2021
+  title_of_work: (재)일본군성노예제문제해결을위한정의기억연대
+  link_to_work: https://www.womenandwarmuseum.net/
+  creator_of_work: 팀두루미
+  link_to_creator_profile: https://durumi.io
+  year_of_creation: 2022
+
+featuredImages:
+  - image1.png
+  - image2.jpg
+
+bookingNaver: https://docs.google.com/forms/d/17Ao2Ly8M5YQT_dhy60_PXvN16XM6vohfoZn31lRvqeg/viewform?edit_requested=true
+
+footer:
+  전화: 02-392-5252
+  팩스: 02-332-5256
+  주소: 서울특별시 마포구 월드컵북로 11길 20
+  고유번호: 637-82-00114
+  이메일: info@womenandwar.net
+  url: https://www.womenandwarmuseum.net/
+  fb: https://www.facebook.com/warwomenmuseum/
+  youtube: https://www.youtube.com/channel/UCQD1q6jrJtLg8jXrora2jUg
+  instagram: https://www.instagram.com/war_women_museum/?hl=ko
+
+googleFonts:
+  - https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap
+  - https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;700&display=swap
+
+cfImagePrefix: 'https://durumi.io/cdn-cgi/image'
+cfImageStyles:
+  thumb: 'fit=scale-down,width=300'
+  thumbStores: 'fit=scale-down,width=800'
+  full: 'fit=scale-down,width=1920'
+
+stibee:
+  accessToken: DONTCOMMIT
+  endpointSubscribe: 'https://page.stibee.com/api/v1.0/lists'
+  listIdSubscribe: 112752
+  endpointEmailList: 'https://page.stibee.com/archives/105093/emails'
+  listIdPublic: 105093
