--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -49,26 +49,30 @@ main:
   - name: 피해자지원
     url: /categories/생존자복지/
     weight: 1
-    parent: 활동소개    
+    parent: 활동소개
   - name: 수요시위
     url: /categories/this-week/
     weight: 2
-    parent: 활동소개 
-  - name: 국내연대
-    url: /categories/
+    parent: 활동소개
+  - name: 연대사업
+    url: /categories/연대사업/
     weight: 3
     parent: 활동소개
-  - name: 해외연대
-    url: /categories/
+  - name: 나비기금
+    url: categories/나비기금/
     weight: 4
-    parent: 활동소개       
-  - name: 교육사업
-    url: /categories/장학교육/
+    parent: 활동소개
+  - name: 나비기금
+    url: categories/전시성폭력재발방지/
     weight: 5
-    parent: 활동소개      
-  - name: 평화비 건립
-    url: /actions/statue-of-peace
+    parent: 활동소개
+  - name: 교육사업
+    url: /categories/연구조사교육/
     weight: 6
+    parent: 활동소개
+  - name: 평화비 건립
+    url: /categories/기림사업/
+    weight: 7
     parent: 활동소개            
 
   - name: 단체소식
