--- a/config/_default/module.yml
+++ b/config/_default/module.yml
@@ -5,3 +5,4 @@ hugoVersion:
 imports:
 - path: github.com/team-durumi/theme-wwm
 - path: github.com/bep/hugo-starter-tailwind-basic/v2
+- path: github.com/team-durumi/tailwind-aa-theme
