--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -85,12 +85,12 @@ ko:
   소식참여:
     정기후원신청하기:
       title: 정기후원 신청하기
-      body: 전쟁과여성인권박물관에 별도로 정기후원을 신청할 수 있습니다. 정기후원 신청시 박물관 선택 옵션을 체크하세요.
+      body: 정의기억연대에 별도로 정기후원을 신청할 수 있습니다. 정기후원 신청시 박물관 선택 옵션을 체크하세요.
       link: "https://mrmweb.hsit.co.kr/v2/Member/MemberJoin.aspx?action=join&server=anSZe1lBpJs/ev/3FiPISw=="
       buttonLabel: 정기후원
     일시후원신청하기:
       title: 일시후원 신청하기
-      body: 박물관 후원계좌( KB국민은행 069137-04-021905 전쟁과여성인권박물관 ), 신용카드·실시간계좌이체 등 편한 방식으로 후원하실 수 있습니다.
+      body: 정의기억연대 후원계좌( KB국민은행 069137-04-021905 전쟁과여성인권박물관 ), 신용카드·실시간계좌이체 등 편한 방식으로 후원하실 수 있습니다.
       link: "https://online.mrm.or.kr/T5vJlVX"
       buttonLabel: 일시후원
     후원문의:
