푸터를 정리하고, baseof.html에서 연결되는 header, footer지정합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -25,6 +25,7 @@ footer:
   팩스: 02-332-5256
   주소: 서울특별시 마포구 월드컵북로 11길 20
   고유번호: 637-82-00114
+  후원계좌: "국민은행 069137-04-014198 | 예금주: 재)일본군성노예제문제해결을위한정의기억"
   이메일: info@womenandwar.net
   url: https://www.womenandwarmuseum.net/
   fb: https://www.facebook.com/warwomenmuseum/
