--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -100,8 +100,8 @@ ko:
       - KB국민은행 069137-04-021905(전쟁과여성인권박물관)
       - 후원에 대해 궁금한 사항은
       - 정의기억연대 운영관리국 070-4903-0528(직) / tax@womenandwar.net 로 문의해 주시기 바랍니다.
-  박물관소개:
-    title: 박물관소개
+  정의연소개:
+    title: 정의기억연대소개
     인사말:
       title: 인사말
       message: “전쟁과여성인권박물관에 오신 것을 환영합니다.”
@@ -111,19 +111,25 @@ ko:
       - 전쟁과여성인권박물관은 다양한 전시와 교육 프로그램을 통해 과거의 역사와 기억을 알리고, ‘여성, 인권, 평화’를 향한 현재의 활동을 기록함으로써 미래세대에게 더 나은 세상을 전하고자 합니다.
       - 초국적 시민 연대의 통로, 미래세대 교육의 장, 기억과 기록의 국제 플랫폼이 되고자 하는 이곳 전쟁과여성인권박물관에 여러분들의 지속적인 관심과 참여 부탁드립니다.
       - 감사합니다.
-    미션비전:
-      title: "미션/비전"
+    비전미션:
+      title: "비전/미션"
       비전:
         title: 비전
         body: 
-        - 일본군성노예제 문제 및 해결 운동에 관한 
-        - 기록과 기억의 국제 플랫폼
+        - 1990년 37개 여성단체의 결의로 발족한 '한국정신대문제대책협의회'는 2015한일합의무효화와 일본군성노예제문제의 정의로운 해결을 위해 100만 시민들의 참여로 2016년 설립된 ‘일본군성노예제 문제해결을 위한 정의기억재단’과 2018년 7월 11일 통합하여 현재는 정의기억연대가 되었습니다.
+      사명:
+        title: 사명
+        message: 
+        - 여성인권평화의 관점에서 세계시민과 함께
+        - 일본군성노예제 문제와
+        - 분쟁하 여성인권 침해 및 성착취 문제를 해결하고
+        - 기억하는데 앞장선다.
       미션:
         title: 미션
         message: 
-        - 기억과 기록
-        - 연대와 계승
-        - 소통과 확장
+        - 앞장서고 연대한다
+        - 기록하고 기억하고 교육한다
+        - 소통하고 튼튼하게 한다
         목록:
          - body: 1. 기록의 체계적 수집과 보존
            image: "/images/mission-and-vision-001.jpg"
