--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -14,6 +14,14 @@ license:
   link_to_creator_profile: https://durumi.io
   year_of_creation: 2022
 
+bucketHostname: 'https://media.womenandwar.net'
+cfImagePrefix: 'https://kctu-photo.durumi.io/cdn-cgi/image'
+cfImageStyles:
+  thumb: 'fit=scale-down,width=300'
+  full: 'fit=scale-down,width=1920'
+  frontSlide: 'fit=cover,width=1920,height=1280'
+  thumb2by3: 'fit=cover,width=300,height=200'  
+
 featuredImages:
   - image1.png
   - image2.jpg
