--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 	"dependencies": {
 		"google-spreadsheet": "^3.2.0",
 		"json-to-frontmatter-markdown": "^1",
+		"json2yaml": "^1.1.0",
+		"node-html-parser": "^6.1.4",
 		"turndown": "^7.1.1"
 	}
 }
