활동페이지 4번째 탭을 소식메뉴로 연결합니다.

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -181,6 +181,10 @@ ko:
     참여:
       title: 참여하려면
       slug: join
+    이번주수요시위:
+      title: 이번주 수요시위
+      slug: this_week
+      url: "/categories/this-week/"      
   victim_support:
     title: "피해생존자지원"
     slug: victim_support
