활동>수요시위

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -20,167 +20,155 @@ ko:
     의미:
       title: 의미
       slug: meanings
+      wed_1차수요시위:
+        title: 1차수요시위
+        src: https://r2.womenandwar.net/2018/08/19920108_%E1%84%8C%E1%85%A61%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%87%E1%85%AE%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-600x600.jpg
+      wed_500차수요시위:
+        title: 500차수요시위
+        src: https://womenandwar.net/kr/wp-content/uploads/2018/08/20010313_%E1%84%8C%E1%85%A6500%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%87%E1%85%AE%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-600x600.jpg
+      section_01:
+        body: "“일본군성노예제 문제해결을 위한 정기 수요시위”는 1992년 1월 8일 미야자와 전 일본 총리의 방한을 계기로 시작되어 일본군성노예제 문제에 대한 진상규명과 책임 이행 등 문제 해결 그리고 피해자들의 명예와 인권회복을 요구해왔습니다. 또한 문제 해결을 위한 활동을 지속적으로 알려내고, 피해자와 시민들이 연대하는 장소, 살아있는 역사교육의 공간, 여성인권과 평화를 외치는 장, 국경을 넘어선 연대의 장으로 확대되었습니다. 수요시위는 일본군성노예제문제해결을 위한 정의기억연대가 주최하고, 18 곳의 네트워크협의회를 비롯해 수많은 시민사회단체, 일반 시민들이 주관 및 참여하여 28년째 이어오고 있는 우리 모두의 소중한 역사입니다."
+      wed_700차수요시위: 
+        title: 700차 수요시위
+        src: https://womenandwar.net/kr/wp-content/uploads/2018/08/20060315_%E1%84%8C%E1%85%A6700%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%87%E1%85%AE%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF-%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-300x300.jpg
+      wed_1000차수요시위및평화비건립:
+        title: 1000차 수요시위 및 평화비 건립
+        src: https://womenandwar.net/kr/wp-content/uploads/2018/08/20111214_%E1%84%8C%E1%85%A61000%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%87%E1%85%AE%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-%E1%84%86%E1%85%B5%E1%86%BE-%E1%84%91%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AA%E1%84%87%E1%85%B5-%E1%84%80%E1%85%A5%E1%86%AB%E1%84%85%E1%85%B5%E1%86%B8-300x300.jpg
+      wed_1300차수요시위:
+        title: 1300차 수요시위
+        src: https://womenandwar.net/kr/wp-content/uploads/2018/08/20170913_%E1%84%8C%E1%85%A61300%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-300x300.jpg
+      wed_1300차수요시위및나비행진:
+        title: 1300차 수요시위 및 나비행진
+        src: https://womenandwar.net/kr/wp-content/uploads/2018/08/20170913_%E1%84%8C%E1%85%A61300%E1%84%8E%E1%85%A1-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%92%E1%85%A2%E1%84%80%E1%85%A7%E1%86%AF%E1%84%8B%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B1%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%80%E1%85%B5%E1%84%89%E1%85%AE%E1%84%8B%E1%85%AD%E1%84%89%E1%85%B5%E1%84%8B%E1%85%B1-%E1%84%86%E1%85%B5%E1%86%BE-%E1%84%82%E1%85%A1%E1%84%87%E1%85%B5%E1%84%92%E1%85%A2%E1%86%BC%E1%84%8C%E1%85%B5%E1%86%AB-300x300.jpg
+      section_02:
+        title: 해외에서
+        body: "한국뿐만 아니라 일본, 미국, 영국, 독일, 프랑스, 호주, 뉴질랜드, 캐나다, 폴란드, 남아프리카 공화국, 필리핀, 태국, 미얀마 등 전 세계 약 23개국 60여 개 도시에서 수만 명의 참여로 이끌어 온 세계 연대의 매개체입니다. 이렇게 뜻 깊은 수요시위를 통해 정의기억연대는 일본정부에 일곱 가지 사항을 요구하고 있습니다."
+        message:
+        - "하나. 전쟁범죄 인정"
+        - "둘. 진상규명"
+        - "셋. 공식사죄"
+        - "넷. 법적배상"
+        - "다섯. 책임자 처벌"
+        - "여섯. 역사교과서에 기록"
+        - "일곱. 추모비와 사료관 건립"
     연혁:
       title: 연혁
       slug: history
       수요시위연혁:
         title: 수요시위연혁
         목록:
-          - title: 1994
-          - date: "00."
+          - title: 1992
+          - date: 1월 08일
             body:
-            - "'여성과 전쟁' 사료관 건립준비위원회 발족"
+            - 제1차 수요시위
+          - date: 12월 23일
+            body:
+            - 제50차 수요시위 및 정신대 만행·진상규명을 촉구하는 범시민대회 개최       
+          - title: 1993
+          - date: 12월 22일
+            body:
+            - 제100차 수요시위
+          - title: 1996
+          - date: 5월 29일
+            body:
+            - 제218차 수요시위 – 여성을 위한 아시아국민기금 철회 요구 항의서한 전달                        
           - title: 1999
-          - date: "02."
+          - date: 12월 29일
             body:
-            - "서대문 한국정신대문제대책협의회 사무실 내 전시 및 교육을 위한 교육관 개관"
+            - 제391차 수요시위 – 20세기 마지막 수요시위
+          - title: 2000            
+          - date: 9월 06일 
+            body:
+            - 일본군성노예전범 여성국제법정 성공 기원 전국 릴레이 수요시위 진행
+            - 2000년 9월 ~ 12월 서울·광주·대구·부산·창원
+          - title: 2001            
+          - date: 12월 26일
+            body:
+            - 제490차 수요시위 – 일본군성노예전범 여성국제법정 최종판결 보고회 및 돌아가신 할머니 추모회 진행
+          - title: 2002
+          - date: "3월 13일" 
+            body:
+            - 제500차 수요시위
           - title: 2003
-          - date: "12.18."
+          - date: 8월 06일
             body:
-            - "'일본군'위안부'피해자를 진정으로 추모하는 일은 그들의 고통을 잊지 않고, 다시는 이런 일이 일어나지 않도록 교육하고 활동하는 것'이라는 취지 아래 돌아가신 할머니들을 위한 추모회 및 전쟁과여성인권박물관 건립을 위한 점화식(일본군'위안부'피해자 길원옥, 김분선, 김은례, 백넙데기, 신현순, 이금순, 이용수, 장점돌, 하상숙, 최갑순, 박두리, 황순이, 김상희, 이순덕, 이옥금, 한도순의 박물관 주춧돌기금 후원)"                          
-          - title: 2004
-          - date: "10.22."
+            - 제570차 수요시위 – 해방 58주년에 즈음한 일본군‘위안부’피해자들의 방일집회 출정식 진행
+          - title: 2004        
+          - date: 2월 04일 
             body:
-            - "국회 통일외교통상위원회의 외교통상위원회 국정감사에 길원옥할머니가 증인으로 출석"
-            - 통일외교통상위원회 소속 국회의원 전원 만장일치로 일본군‘위안부’ 피해자의 명예와 인권회복을 위한 역사관 건립을 위한 결의안 채택, 국회 본회에 상정, 결의안 채택
-          - date: 12.16.
+            - 제594차 수요시위 – 일본군‘위안부’ 피해자 주관 수요시위 진행
+          - date: 3월 17일
             body:
-            - 건립위원회 발족식 개최(공동건립위원장단, 공동건립추진위원장단 추대)
-            - 홍보인쇄물․영상물 제작․공식 모금활동 시작
-          - date: 12.27.
+            - 제600차 수요시위 – 피해자들의 명예회복과 평화를 염원하는 600인 선언 진행
+          - title: 2005       
+          - date: 1월 19일
             body:
-            - 제1차 공동건립추진위원장단 회의(박물관 부지마련 대책 본격 논의시작)
-          - title: 2005
-          - date: "01." 
+            - 제641차 수요시위-해방 60주년 일본군‘위안부’ 할머니에게 정의를! 캠페인 발대식
+          - date: 11월 16일
             body:
-            - 박물관 부지 마련 활동 시작(서울시 내 공원부지, 서울시 및 중앙정부 소유 건물 중 박물관으로 리모델링 가능한 건물 탐색)
-          - date: 05.27.
+            - 제683차 수요시위-한국정신대문제대책협의회 창립 15주년 기념 수요시위
+          - title: 2006            
+          - date: 8월 09일
             body:
-            - 국회 여성위원회 간담회
-          - date: "06." 
-            body:
-            - 한국여자프로농구 경기에서 박물관 건립기금 마련을 위한 캠페인 진행
-          - date: "08."
-            body:
-            - 서울시에 박물관 부지 기부 요청
-          - date: "10."
-            body:
-            - 서울시, 서대문독립공원 주차장 자리를 박물관 부지로 추진하는 문제 본격 논의 
-          - date: 10.21.
-            body:
-            - 서대문독립공원 주차장 자리가 문화재에 포함되어 있는 사실 확인
-          - date: 10.25.
-            body:
-            - 서대문독립공원 매점 부지에 박물관 건립하는 것으로 서울시와 합의
-            - 이명주 공동건립추진위원장(명지대학교 건축학과), 김희옥 공동건립추진위원장(에이텍종합건축사사무소 소장) 건축설계 진행                                                                                    
-          - title: 2006
-          - date: 03.08.
-            body:
-            - 서대문독립공원 매점 부지에 박물관을 건립하는 문제와 관련 현상변경 허가신청서 서대문구청에 제출
-          - date: 04.14.
-            body:
-            - 문화재청 사적과 현상변경심의위원회에서 전쟁 여성인권박물관 건립 허가
-          - date: 06.12.
-            body:
-            - 서울시 도시공원위원회 공원조성계획변경심의를 받기 위해 남산공원관리사업소에 심의안건 제출 
-          - date: 07.18.
-            body:
-            - 서울시도시공원위원회 심의 통과
-          - date: 08.18.
-            body:
-            - 소위원회 2차 회의 심의 통과(최종 허가)
-          - date: 09.21.
-            body:
-            - 박물관 건립 설명회를 위한 국회의원 조찬간담회
-          - date: 10.19.
-            body: 
-            - 전쟁과 여성인권박물관 부지 확정 및 건립 설명회 (국가인권위원회 배움터)
-          - date: "11."
-            body: 
-            - 국회 여성가족위원회 예결산소위원회 개최, 박물관 예산논의, 2007년 예산에 올림            
+            - 제721차 수요시위-해방 61주년 및 세계연대의 날 기념 수요시위                                                                                 
           - title: 2007
-          - date: 01.12.
+          - date: 8월 15일
             body:
-            - 남산공원관리사업소에 사업시행 1년 연장 요청
-          - date: 01.24.
+            - 제774차 수요시위 – 일본군‘위안부’문제해결을 위한 세계공동행동주간 연대집회 진행 (10개국, 13개 도시)
+          - title: 2008
+          - date: 3월 08일
             body:
-            - <박물관 2007 시민모금 캠페인> 발대식
-          - date: 02.09.
+            - 한국정신대문제대책협의회 수요시위, 한국여성단체연합 주최 제20회 “올해의 여성운동상” 수상
+          - title: 2009
+          - date: 8월 12일
             body:
-            - 한국정신대문제대책협의회 20개 회원단체장 명의로 여성가족부에 박물관 건립 예산 지원 요청 
-          - date: "04.27. - 04.30."
+            - 제878차 수요시위 – 해방 64주년 세계연대집회 개최 (7개국 12개 도시)
+          - title: 2010          
+          - date: 1월 13일
             body:
-            - 박물관 건립 모금을 위한 오사카 집회
-          - date: 08.26.
+            - 제900차 수요시위 – 일본군‘위안부’문제의 입법해결을 촉구하는 50만 명 서명 캠페인 선포식 진행
+          - date: 11월 17일
             body:
-            - 나의 마음은 지지 않았다' 상영회 참석 및 박물관 홍보 활동(일본 동경)
-          - title: 2008  
-          - date: 03.28. - 03.30.
-            body:
-            - 해외 박물관 네트워크 활동(베트남)
-          - date: 04.07. - 04.09.
-            body:
-            - 해외 박물관 네트워크 활동(대만)
-          - date: 03.31.
-            body:
-            - 박물관 홍보대사(농구선수 전주원) 위촉
-          - date: 04.28.
-            body:
-            - 문화재청, 현상변경심의 관련 신축 재허가(2008년 8월 15일에서 2011년 8월 15일까지로 신축허가 연장)
-          - date: 06.21.
-            body:
-            - 전쟁과여성인권박물관 건립기금 마련을 위한 <이정미 콘서트, 이어지는 노래, 이어지는 춤, 이어지는 삶>(일본 오사카)
-          - date: 06.30. - 07.04.
-            body:
-            - 해외 박물관 네트워크 활동(독일)
-          - date: 07.31.
-            body:
-            - 남산공원관리사업소에 도시계획시설사업 실시계획 인가 신청 서류 제출
-          - date: 08.16. 
-            body:
-            - 호주 시드니에서 일본군'위안부' 할머니와 함께하는 호주친구들 주최 "박물관 후원의 밤" 개최
-          - date: 09.08.
-            body:
-            - 남산공원관리사업소, 도시계획시설사업 실시계획 인가 신청에 따른 결과 통보
-          - date: 10.16.
-            body:
-            - 박물관 사업실시계획 인가 통보 및 인가증(건축허가) 교부
-          - date: 10.17.
-            body:
-            - 전쟁과여성인권박물관 건립을 위한 일본 동경 학습회
-          - date: 10.24. - 10.27.
-            body:
-            - 해외 박물관 네트워크 활동(중국 상해, 무한)
-          - date: 11.03.
-            body:
-            - 광복회 박물관 건축허가 철회를 위한 기자회견에 관한 정대협 입장 기자회견)
-          - title: 2009 
-          - date: 02.07.
-            body:
-            - 전쟁과 여성인권박물관 일본 건설위원회 발족 집회
-          - date: 02.28.
-            body:
-            - 전쟁과여성인권박물관 건립기금 마련을 위한 <이정미 콘서트>(일본 동경)
-          - date: 03.08.
-            body:
-            - 전쟁과여성인권박물관 착공식 <희망의 터 다지기>
-          - date: 03.11. ~ 03.15.
-            body:
-            - 서울메트로미술관 내 <전쟁과여성인권 국제전>
+            - 제944차 수요시위 – 한국정신대문제대책협의회 창립 20주년 기념 수요시위 진행
           - title: 2011
-          - date: "02."
+          - date: 12월 14일
             body:
-            - 서대문독립공원 부지를 보류하고 기존의 건물을 매입해서 리모델링하기로 결의, (독립운동의 성지에 ‘위안부’ 박물관을 세울 수 없다며 광복회와 순국선열유족회 등 독립운동단체들의 공개적인 반대와 서을시의 미온적인 태도로 인해) 새로운 부지를 물색하기 시작
-          - date: "08."
-            body:
-            - 성미산 자락의 2층 주택 매입 (서울시 마포구 성산동 39-13) 건축 설계 및 시공, 자료수집, 모금 활동 전개
+            - 제1000차 수요시위 – 주한 일본대사관 앞 평화비(평화의소녀상) 제막식 진행
           - title: 2012
-          - date: 01.26.
+          - date: 1월 11일
             body:
-            - 건물 리모델링 공사 착공식      
+            - 수요시위 20주년 기념 수요시위 진행
+          - title: 2013
+          - date: 8월 14일
+            body:
+            - 제1087차 수요시위 – 제1차 세계 일본군‘위안부’기림일 세계연대행동 ‘세계연대집회’ 진행
+          - title: 2016
+          - date: 11월 16일
+            body:
+            - 제1257차 수요시위-한국정신대문제대책협의회 창립 26주년 기념 수요시위 진행
+          - title: 2017
+          - date: 9월 13일
+            body:
+            - 제1300차 수요시위 – 주한 일본대사관에 일본군성노예제 문제해결을 위한 1억인 서명운동 결과 전달
+          - title: 2018
+          - date: 8월 15일
+            body:
+            - 제6차 일본군’위안부’기림일 맞이 세계연대집회 제1348차 수요시위 진행
+          - title: 2019
+          - date: 8월 14일
+            body:
+            - 제7차 일본군’위안부’기림일 맞이 세계연대집회 / 1400차 수요시위 진행
+          - title: 2020
+          - date: 1월 28일
+            body:
+            - 28주년 수요시위(1421차)
     참여:
       title: 참여하려면
       slug: join
+      body: 
+      - "“일본군성노예제 문제해결을 위한 정기 수요시위”는 매주 수요일 낮 12시 정각에 주한 일본대사관 앞 “평화로”에서 열립니다."
+      - "참여하고자 하는 모든 분들은 사전 참가신청없이 시작 시간에 맞추어 ‘평화로’로 오시면 됩니다."
+      - "참여 단체 리스트 작성과 자유발언은 수요시위 현장을 총괄하는 담당자를 통해 신청이 가능하며, 수요시위 주관 또는 공연을 희망하실 경우, 진행하고자 하는 날짜와 내용 등을 02-365-4016 또는 info@womenandwar.net 으로 미리 연락 주셔야 합니다."
     이번주수요시위:
       title: 이번주 수요시위
       slug: this_week
