피해자생존지원 데이터, 레이아웃 업데이트

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -170,7 +170,7 @@ ko:
       - "참여하고자 하는 모든 분들은 사전 참가신청없이 시작 시간에 맞추어 ‘평화로’로 오시면 됩니다."
       - "참여 단체 리스트 작성과 자유발언은 수요시위 현장을 총괄하는 담당자를 통해 신청이 가능하며, 수요시위 주관 또는 공연을 희망하실 경우, 진행하고자 하는 날짜와 내용 등을 02-365-4016 또는 info@womenandwar.net 으로 미리 연락 주셔야 합니다."
     이번주수요시위:
-      title: 이번주 수요시위
+      title: 소식 보러가기
       slug: this_week
       url: "/categories/this-week/"      
   victim_support:
@@ -178,7 +178,21 @@ ko:
     slug: victim_support
     활동소개:
       title: 활동소개
-      slug: victim_support
+      slug: introductions
+      section_01: 일본군성노예제 문제의 올바른 해결이 국내 및 아시아 지역 피해자들의 진정한 인권회복이라 여기며, 일본군성노예제 피해자들을 위한 다양한 복지·지원 활동을 통해 보다 안정적인 생활을 영위하도록 연대하고 지원하고 있습니다.
+      목록:
+        - title: 할머니 정기방문
+        - body: 서울, 경기, 대구, 경북, 부산, 울산, 경남 전국에 살고 계신 할머니들을 한 달에 한 번 정기적으로 방문하면서 할머니들과 편안히 이야기도 나누고 생활에 어려운 부분도 말씀하실 수 있도록 정신적 유대감을 높이는 활동을 합니다.
+        - title: 일상적 전화통화
+        - body: 아픈 곳은 없으신지, 생활하시는 데 불편하거나 필요하신 건 없으신지 체크하여 도움을 드리고 심적으로 위안을 받으실 수 있도록 자주 전화를 드리고 대화를 나눕니다. 특히 혼자 사시는 할머니들은 일주일에 2~3번 자주 전화를 드리면서 건강과 환경 상황을 확인하고 비상상황을 빠르게 알고 대처할 수 있도록 합니다.
+        - title: 생신 챙기기
+        - body: 1년에 딱 한 번 있는 할머니만의 날을 챙겨서 되도록 직접 방문하여 선물도 드리고 축하인사도 드립니다.
+        - title: 명절, 어버이날, 스승의날 챙기기
+        - body: 설이나 추석 등 큰 명절에는 직접 방문하여 명절을 풍성하게 보내실 수 있도록 덕담도 나누고 선물을 드리고, 어버이날과 스승의날에는 전화를 드려서 감사 인사를 전합니다.              
+    할머니소식:
+      title: 소식 보러가기
+      slug: activities
+      url: "/categories/생존자복지"    
   domestic_solidarity:
     title: "국내 연대"
     slug: domestic_solidarity
